release/gateway.yaml
##################################################
## Gateway Service
##################################################

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
spec:
  ports:
    - name: http
      port: 5000
      targetPort: gateway-port
    - name: https
      port: 443
      targetPort: webhook-port
    # - name: admin
    #   port: 8080
    #   targetPort: admin-port
  selector:
    app: gateway
  type: ClusterIP

---
# Gateway Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: api-gateway
      containers:
        - name: gateway
          image: registry.gitlab.com/canderlabs/gateway-go
          imagePullPolicy: Always
          ports:
            - name: gateway-port
              containerPort: 5000
            - name: webhook-port
              containerPort: 8443
            # - name: admin-port
            #   containerPort: 8080

          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true

          livenessProbe:
            httpGet:
              path: /hz
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 120

      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls

      imagePullSecrets:
        - name: gitlab-auth

---
##################################################
## Gateway Webhook
##################################################

apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: gateway-webhook
  namespace: default
webhooks:
  - name: gateway-service.default.svc
    clientConfig:
      service:
        name: gateway-service
        namespace: default
        path: '/admission'
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNzRENDQVpnQ0NRQ1kreUxGY081Yk1qQU5CZ2txaGtpRzl3MEJBUXNGQURBYU1SZ3dGZ1lEVlFRS0RBOW4KWVhSbGQyRjVMWE5sY25acFkyVXdIaGNOTWpBd05ESTRNVGMwTlRVeldoY05NekF3TkRJMk1UYzBOVFV6V2pBYQpNUmd3RmdZRFZRUUtEQTluWVhSbGQyRjVMWE5sY25acFkyVXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCCkR3QXdnZ0VLQW9JQkFRRG5HUEUwQzc5S2ZXdkpORUlJdUhuOSsxNG42dHllQndzVmlNNVcrd3hZY1ZTakxuSXQKWHYwZnh4YjUrQjNWSjFJTy91MEhvODBsZjh0MGdEa21HajRRVWFJVGxNQU83dnVkd053OVJ6bGRsUVlzaFo3dAprcWlXNm1yUHcx [...]
    rules:
      - operations: ['*']
        apiGroups: ['*']
        apiVersions: ['*']
        resources: ['services']
